samples/_failures_safe/1761527773_952966_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e0dce89.c: In function ‘main’:
./samples/SAFE/__tmp_5e0dce89.c:109:5: error: expected declaration or statement at end of input
  109 |     if (linear_system_solve(&sys)) {
      |     ^~
./samples/SAFE/__tmp_5e0dce89.c:109:5: error: expected declaration or statement at end of input
